Add example test

--- a/src/extern/src/components/CMakeLists.txt
+++ b/src/extern/src/components/CMakeLists.txt
@@ -3,3 +3,4 @@ add_headers_and_sources(hovertaxi_components .)
 add_library(hovertaxi_components ${hovertaxi_components_headers} ${hovertaxi_components_sources})
 target_include_directories(hovertaxi_components PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(hovertaxi hovertaxi_components)
+target_link_libraries(hovertaxi_test hovertaxi_components)
