--- a/src/extern/src/models/CMakeLists.txt
+++ b/src/extern/src/models/CMakeLists.txt
@@ -3,3 +3,4 @@ add_sources_only(hovertaxi_models .)
 add_library(hovertaxi_models ${hovertaxi_models_sources})
 target_include_directories(hovertaxi_models PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(hovertaxi hovertaxi_models)
+target_link_libraries(hovertaxi_test hovertaxi_models)
