--- a/docker/images/python/Dockerfile
+++ b/docker/images/python/Dockerfile
@@ -1,4 +1,6 @@
-FROM python:3
+FROM python:3.7.3
+
+RUN apt-get update && apt-get install -y cmake
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
