--- a/src/extern/CMakeLists.txt
+++ b/src/extern/CMakeLists.txt
@@ -1,16 +1,17 @@
 cmake_minimum_required(VERSION 3.7)
-
 project(hovertaxi)
-
 set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
 include_directories(src)
-
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/cmake)
 
 include(UseCython)
 set(CYTHON_FLAGS ${CYTHON_FLAGS} -3)
 
+find_package(libmongocxx REQUIRED)
+find_package(libbsoncxx REQUIRED)
+
+# googletest
 # Download and unpack googletest at configure time
 configure_file(libs/CMakeLists.txt libs/googletest-download/CMakeLists.txt)
 execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
@@ -36,12 +37,23 @@ add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
         ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
         EXCLUDE_FROM_ALL)
 
-add_subdirectory(src/components)
-add_subdirectory(src/controllers)
 
-add_executable(hovertaxi_test src/test/test.cpp)
+# Project sources
+include(glob_sources)
+add_headers_and_sources(hovertaxi src)
+add_headers_and_sources(hovertaxi src/components)
+add_headers_and_sources(hovertaxi src/controllers)
+add_headers_and_sources(hovertaxi src/services)
+
+# Test target
+add_executable(hovertaxi_test ${hovertaxi_headers} ${hovertaxi_sources})
 target_link_libraries(hovertaxi_test gtest_main)
-target_link_libraries(hovertaxi_test hovertaxi_components)
-target_link_libraries(hovertaxi_test hovertaxi_controllers)
-
 add_test(NAME hovertaxi_test COMMAND hovertaxi_test)
+
+# MongoDB drivers
+include_directories(${LIBMONGOCXX_INCLUDE_DIRS})
+include_directories(${LIBBSONCXX_INCLUDE_DIRS})
+target_link_libraries(hovertaxi_test ${LIBMONGOCXX_LIBRARIES} ${LIBBSONCXX_LIBRARIES})
+
+# Cython modules
+add_subdirectory(src/controllers)
