--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ __pycache__
 src/extern/build/
 src/extern/hovertaxi_extern.cpp
 *.so
+src/extern/src/test/unit/main
+src/extern/src/test/unit/tests.cpp
