--- a/src/extern/src/controllers/aircraft/CMakeLists.txt
+++ b/src/extern/src/controllers/aircraft/CMakeLists.txt
@@ -4,5 +4,5 @@ add_headers_and_sources(hovertaxi_aircraft ../../../src/controllers)
 add_headers_and_sources(hovertaxi_aircraft ../../../src/services)
 
 cython_add_module(aircraft_controller aircraft_controller.pyx ${hovertaxi_aircraft_sources})
-target_link_libraries(aircraft ${LIBMONGOCXX_LIBRARIES} ${LIBBSONCXX_LIBRARIES})
+target_link_libraries(aircraft_controller ${LIBMONGOCXX_LIBRARIES} ${LIBBSONCXX_LIBRARIES})
 include_directories(.)
